apps/model-registry/upstream/options/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-registry
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: model-registry-service.kubeflow.svc.cluster.local
        port:
          number: 8080
  - match:
      - port: 9090
    route:
      - destination:
          host: model-registry-service.kubeflow.svc.cluster.local
          port:
            number: 9090
